Added Seeed studio + blur images

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="container col-xxl-8 px-4 py-5">
-    <img class="d-block mx-auto mb-4" src="assets/logo-ei-soracom.png" alt="" width="300">
+    <img class="d-block mx-auto mb-4" src="assets/ei-soracom-seeed.png" alt="" width="400">
     <hr>
     <h1 class="text-center display-5 fw-bold lh-1 mb-3">Privacy-first advertising panel</h1>
     <div class="row align-items-center g-5 py-5">
@@ -25,7 +25,7 @@
       <div class="col-6 text-center"> 
         <h2>Camera feed after processing</h2>
         <p class="lead mb-4"></p>
-        <img src="{{ url_for('video_feed') }}" class="img-fluid border rounded-3 mb-4" width="200" alt="Video feed" loading="lazy">
+        <img src="{{ url_for('video_feed') }}" class="img-fluid border rounded-3 mb-4" width="300" alt="Video feed" loading="lazy">
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4"></p>
           <p class="lead">Inference speed: <span id="inference_speed"></span> ms</p>
