--- a/templates/index-with-background.html
+++ b/templates/index-with-background.html
@@ -23,7 +23,7 @@
 <body>
 
   <div class="container col-xxl-8 px-4 py-5">
-    <img class="d-block mx-auto mb-4" src="assets/logo-ei-soracom.png" alt="" width="300">
+    <img class="d-block mx-auto mb-4" src="assets/ei-soracom-seeed.png" alt="" width="300">
     <hr>
     <h1 class="text-center display-5 fw-bold lh-1 mb-3">Privacy-first advertising panel</h1>
     <div class="row align-items-center g-5 py-5">
